Use object-fit and position to prevent stretching

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -67,6 +67,8 @@ a {
 	width: 50px;
 	height: 50px;
 	border-radius: 50%;
+	object-fit: cover;
+	object-position: center;
 }
 
 .user-name {
